Fix overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -103,6 +103,7 @@ ul li{
 	display: block;
 	border: 2px solid #99FFCC;
 	border-radius: 5px;
+	overflow: auto;
 }
 
 a:hover{
